tests/a/tests/integrity/fail/let/let.1.stderr
error: expected {root}{root}, found {c,root}{root}
  --> tests/integrity/fail/let/let.1.rs:10:13
   |
10 |     let y = x;
   |             ^
